Bug 1686800 - Call mCompositor->EndFrame() only when StartCompositing() is called r=lsalzman

This is a short term fix.

Differential Revision: https://phabricator.services.mozilla.com/D107779